--- a/components/medecine-page/medecine-page.pcss
+++ b/components/medecine-page/medecine-page.pcss
@@ -376,9 +376,9 @@
 	width: 100%;
 	background-color: var(--white);
 	/*filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.05));*/
-	-webkit-box-shadow: 0px 12px 19px -5px rgba(34, 60, 80, 0.2);
-	-moz-box-shadow: 0px 12px 19px -5px rgba(34, 60, 80, 0.2);
-	box-shadow: 0px 12px 19px -5px rgba(34, 60, 80, 0.2);
+	-webkit-box-shadow: 0px 24px 30px -7px rgba(34, 60, 80, 0.1);
+	-moz-box-shadow: 0px 24px 30px -7px rgba(34, 60, 80, 0.1);
+	box-shadow: 0px 24px 30px -7px rgba(34, 60, 80, 0.1);
 	animation: fade 0.2s linear;
 	z-index: 9;
 
@@ -458,11 +458,12 @@
 }
 
 .medecine-page__products-list {
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
 
 	@media (--tablet) {
+		display: flex;
+		flex-direction: column;
 		gap: 10px;
 	}
 
@@ -476,26 +477,48 @@
 .medecine-product {
 	position: relative;
 	display: grid;
-	grid-template-columns: 100px 1fr;
+	grid-template-columns: 1fr;
 	gap: 10px 20px;
 	padding: 20px;
 	background-color: var(--white);
-	box-shadow: 0px 3px 16px rgba(0, 0, 0, 0.08);
-	border-radius: 10px;
-	transition: box-shadow 0.1s linear;
+
+
+	&:nth-child(even) {
+		border-width: 1px 0px;
+		border-style: solid;
+		border-color: #E7E7E7;
+	}
+
+	&:nth-child(odd) {
+		border-width: 1px 1px 1px 0px;
+		border-style: solid;
+		border-color: #E7E7E7;
+	}
+
 
 	@media (--tablet) {
 		display: flex;
-		padding-bottom: 135px;
+		box-shadow: 0px 3px 16px rgba(0, 0, 0, 0.08);
+		border-radius: 10px;
+		transition: box-shadow 0.1s linear;
+		border: 0;
+
+		&:nth-child(even) {
+			border: 0;
+		}
+
+		&:nth-child(odd) {
+			border: 0;
+		}
+
+		&:hover {
+			box-shadow: 0 0 20px rgba(23, 37, 0, .15), 0 27px 20px rgba(153, 171, 125, .3);
+		}
 	}
 
 	@media (--desktop-medium) {
 		padding: 30px;
 	}
-}
-
-.medecine-product:hover {
-	box-shadow: 0 0 20px rgba(23, 37, 0, .15), 0 27px 20px rgba(153, 171, 125, .3);
 }
 
 .medecine-product__picture {
@@ -513,13 +536,14 @@
 
 .medecine-product__img {
 	max-width: 100%;
-	width: 100px;
+	width: 140px;
 	height: auto;
-	padding-top: 30px;
+	max-height: 100px;
 
 	@media (--tablet) {
 		width: 100%;
 		padding-top: 0;
+		max-height: 190px;
 	}
 }
 
@@ -540,11 +564,31 @@
 	}
 }
 
+.medecine-product__discont {
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 2px 7px;
+	background: var(--primary);
+	border-radius: 28px;
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 17px;
+	color: var(--white);
+
+	@media (--tablet) {
+		padding: 2px 14px;
+		font-size: 18px;
+		line-height: 26px;
+	}
+}
+
 .medecine-product__title {
+	display: inline-flex;
 	margin-bottom: 5px;
 	font-weight: 700;
-	font-size: 18px;
-	line-height: 20px;
+	font-size: 13px;
+	line-height: 110%;
 	color: #333333;
 
 	@media (--tablet) {
@@ -560,10 +604,10 @@
 }
 
 .medecine-product__rows {
-	display: grid;
-	gap: 3px;
+	display: none;
 
 	@media (--tablet) {
+		display: grid;
 		gap: 5px;
 		max-width: 400px;
 	}
@@ -631,24 +675,20 @@
 }
 
 .medecine-product__price-buy {
-	grid-column: span 2;
-	display: grid;
-	grid-template-columns: 120px 1fr;
+	flex: 0 1 320px;
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
 
 	@media (--tablet) {
-		display: flex;
-		flex-direction: column;
-		grid-template-columns: repeat(1, 1fr);
+		gap: 10px 20px;
 		max-width: 250px;
 		width: 100%;
 		margin-left: auto;
 	}
 
 	@media (--desktop-medium) {
-		display: grid;
-		grid-template-columns: 1fr 320px;
 		gap: 10px 20px;
-		grid-column: span 1;
 		max-width: 100%;
 		width: auto;
 	}
@@ -658,16 +698,11 @@
 	display: grid;
 	grid-template-columns: repeat(1, 1fr);
 	justify-self: flex-end;
-	padding-right: 20px;
-	text-align: right;
+	text-align: left;
 
 	@media (--tablet) {
-		grid-template-columns: repeat(2, 1fr);
-		gap: 6px;
 		align-self: flex-end;
-		margin-bottom: 9px;
 		padding-right: 0;
-		text-align: left;
 	}
 
 	@media (--desktop-medium) {
@@ -702,14 +737,16 @@
 	margin-top: -4px;
 	white-space: nowrap;
 	font-weight: 400;
-	font-size: 18px;
-	line-height: 26px;
+	font-size: 12px;
+	line-height: 17px;
 	color: #BEBEBE;
 
 	@media (--tablet) {
 		justify-self: flex-end;
 		align-self: center;
 		margin-top: 0;
+		font-size: 18px;
+		line-height: 26px;
 	}
 
 	@media (--desktop-medium) {
@@ -719,15 +756,15 @@
 }
 
 .medecine-product__price-new {
-	margin-top: -10px;
 	white-space: nowrap;
 	font-weight: 700;
-	font-size: 24px;
-	line-height: 35px;
-	color: var(--primary);
+	font-size: 16px;
+	line-height: 23px;
 
 	@media (--tablet) {
 		margin-top: 0;
+		font-size: 32px;
+		line-height: 46px;
 	}
 }
 
@@ -837,13 +874,15 @@
 .medecine-product__price-price {
 	font-weight: 700;
 	white-space: nowrap;
-	font-size: 24px;
-	line-height: 35px;
+	font-size: 16px;
+	line-height: 23px;
 	color: #000000;
 
 	@media (--tablet) {
 		grid-column: span 2;
 		justify-items: flex-end;
+		font-size: 32px;
+		line-height: 46px;
 	}
 }
 
@@ -1160,16 +1199,14 @@
 .medecine-page__favorite {
 	position: absolute;
 	right: 0;
-	top: -4px;
-	width: 22px;
-	height: 28px;
-	display: none;
+	top: 0;
+	width: 21px;
+	height: 21px;
+	object-fit: cover;
 
 	@media (--tablet) {
-		right: 0;
-		top: -4px;
 		width: 30px;
-		display: block;
+		height: 30px;
 	}
 
 	@media (--desktop-medium) {
@@ -1177,19 +1214,6 @@
 		top: 4px;
 	}
 }
-
-.medecine-page__favorite--mobile {
-	position: static;
-	display: block;
-	width: 24px;
-	min-width: 24px;
-	height: 24px;
-
-	@media (--tablet) {
-		display: none;
-	}
-}
-
 
 .medecine-product__buying {
 	display: flex;
@@ -1205,4 +1229,27 @@
 
 .medecine-page .product-slider {
 	margin-bottom: 30px;
+}
+
+
+.medecine-product__price-top {
+	display: flex;
+	align-items: center;
+	gap: 5px;
+}
+
+.medecine-product__price-discont {
+	padding: 0 5px;
+	background: var(--primary);
+	border-radius: 29px;
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 17px;
+	color: var(--white);
+
+	@media (--tablet) {
+		padding: 2px 10px;
+		font-size: 18px;
+		line-height: 26px;
+	}
 }
