--- a/components/medecine-page/medecine-page.pcss
+++ b/components/medecine-page/medecine-page.pcss
@@ -535,12 +535,13 @@
 }
 
 .medecine-product__img {
-	max-width: 100%;
-	width: 140px;
+	max-width: 140px;
+	width: 100%;
 	height: auto;
 	max-height: 100px;
 
 	@media (--tablet) {
+		max-width: 100%;
 		width: 100%;
 		padding-top: 0;
 		max-height: 190px;
