added new page <<loading>>
and added new block (slider )for product page

--- a/index.pcss
+++ b/index.pcss
@@ -105,5 +105,6 @@
 @import url("./components/town-selector/town-selector.pcss");
 @import url("./components/y-map/y-map.pcss");
 @import url("./components/about-company/about-company.pcss");
+@import url("./components/loading/loading.pcss");
 @import url("./routes/index.pcss");
 @import url("./routes/account.pcss");
