--- a/components/product-preview/product-preview.pcss
+++ b/components/product-preview/product-preview.pcss
@@ -303,6 +303,7 @@
 		justify-content: flex-end;
 		row-gap: 20px;
 		margin-top: 70px;
+		margin-bottom: 10px;
 		padding: 0;
 		width: auto;
 	}
@@ -550,7 +551,7 @@
 	margin-top: 35px;
 
 	@media (--tablet) {
-		order: 5;
+		order: 6;
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
@@ -641,7 +642,7 @@
 			transform: translateX(-50%);
 			height: 100%;
 			width: 1px;
-			background-color: #EFF0F1;
+			background-color: #eff0f1;
 		}
 	}
 
@@ -655,11 +656,9 @@
 			height: 1px;
 			width: 100%;
 			transform: translateX(0%);
-			background-color: #EFF0F1;
+			background-color: #eff0f1;
 		}
 	}
-
-
 }
 
 .product-preview__price-item {
@@ -683,7 +682,6 @@
 			margin-bottom: 0;
 		}
 	}
-
 }
 
 .product-preview__price-icon {
@@ -700,7 +698,6 @@
 		min-width: 40px;
 		height: 40px;
 	}
-
 }
 
 .product-preview__price-info {
@@ -942,14 +939,12 @@
 	}
 }
 
-
-
 .product-preview__price-list--mobile {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
 	padding: 20px 10px;
-	border: 1px solid #E2E2EB;
+	border: 1px solid #e2e2eb;
 	border-radius: 5px;
 
 	& .product-preview__price-info {
@@ -958,10 +953,42 @@
 
 	& .product-preview__price-item--line {
 		margin: 10px 0;
-		border: 1px solid #EFF0F1;
+		border: 1px solid #eff0f1;
 	}
 
 	@media (--tablet) {
 		display: none;
+	}
+}
+
+.product-preview__sets {
+	@media (--tablet) {
+		order: 5;
+		width: 100%;
+		border-top: 1px solid #f8f7f8;
+	}
+
+	@media (--desktop-medium) {
+		& .simple-slider {
+			margin: 40px calc(var(--padding-desktop) * -1) 0;
+		}
+	}
+
+	& .analog-masonry__special-label {
+		margin-right: 20px;
+		font-size: 14px;
+		line-height: 16px;
+	}
+
+	& .simple-slider__content {
+		height: auto;
+		max-height: calc(145px * 3 + 20px);
+	}
+
+	& .simple-slider__title {
+
+		@media (max-width: 358px) {
+			max-width: 150px;
+		}
 	}
 }
